--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "commander": "^12.1.0",
     "express": "^4.21.1",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
